# hardwareFinder

./: LICENSE  README.rst  example.yml  populateHW.py  pyproject.toml  requirements.txt  setup.cfg
src/pyHardwareFinder/: __init__.py
