[metadata]
name=pyHardwareFinder
version=0.0.1
author=Bryan CADET
author_email=florian.dupeyron@mugcat.fr
license='MIT'
description=Python Aaardvark API wrapper
long_description= file: README.rst
long_description_content_type=text/x-rst
url=https://github.com/fdmysterious/pyaa
classifiers=
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Linux
    Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator


[options]
package_dir =
    = src

include_package_data=true

packages= find:
python_requires = >=3.6

install_requires=
    PyYAML==6.0
    pyudev==0.24.0

[options.packages.find]
where = src